--- a/main.tex
+++ b/main.tex
@@ -295,7 +295,7 @@ We also define $$\GaussSumSingleTorusCharacter{T}{\alpha}{\fieldCharacter} = \Ga
 Notice that if $\alpha = \alpha_1 \times \dots \times \alpha_{\lengthof\left(\lambda\right)}$, where $\alpha_j \colon \multiplicativegroup{\finiteFieldExtension{\lambda_j}} \to \multiplicativegroup{\cComplex}$ is a character for every $j$, then
 \begin{align}
 	\label{eq:Gauss_multiplicitive}
-	\GaussSumTorusCharacter{T}{\alpha}{\chi}{\fieldCharacter} = \prod_{j=1}^{\lengthof\left(\lambda\right)} \GaussSumCharacter{\alpha}{\chi}{\fieldCharacter_{\lambda_j}}.
+	\GaussSumTorusCharacter{T}{\alpha}{\chi}{\fieldCharacter} = \prod_{j=1}^{\lengthof\left(\lambda\right)} \GaussSumCharacter{\alpha_j}{\chi}{\fieldCharacter_{\lambda_j}}.
 \end{align}
 
 We are now ready to state Kondo's result.
