--- a/main.tex
+++ b/main.tex
@@ -1054,7 +1054,7 @@ and the Norm map is surjective.
 The main result of this paper is 
 \begin{theorem}
 \label{thm:Phi_stable}
-	The assignments $H \to \cComplex$ given by $$h \mapsto \genHermitianJacobiKernel{\hermitianSpace}{h}$$ are stable functions. Equivalently, the assignments $$\pi \mapsto \dblJacobiSumScalar{\pi}{\chi}$$ are constant on geometric Lusztig series.
+	The assignments $H \to \cComplex$ given by $$h \mapsto \genHermitianJacobiKernel{\hermitianSpace}{\chi}\left(h\right)$$ are stable functions. Equivalently, the assignments $$\pi \mapsto \dblJacobiSumScalar{\pi}{\chi}$$ are constant on geometric Lusztig series.
 \end{theorem}
 %In the $\GL_n$ case, \Cref{thm:gln-doubling-gauss-sum-in-terms-of-kondo} 
 
